refactor: Admin / User 분리 및 변경된 UserSessionRegistry에 맞게 재작성